Enhance ONNX model export and constant folding support
- Implement constant folding for Concat, Gather, and Unsqueeze nodes to optimize output when all inputs are constants.
- Add error handling in ConstantOfShape to ensure input tensor is a compile-time constant.
- Update Gather node to handle constant inputs and implement basic constant folding for specific cases.
- Introduce new PyTorch training examples (MLP, CNN, CNN1D, LSTM, LSTM with hidden and cell states) with ONNX export functionality.
- Modify Dockerfile to copy protobuf files and set ONNX2C_PATH environment variable correctly.
- Enhance web converter UI to include download options for new training examples and models.
- Fix MaxPool and Reshape attributes in ONNX models for better compatibility with onnx2c.

--- a/web_converter/Dockerfile
+++ b/web_converter/Dockerfile
@@ -35,6 +35,7 @@ COPY test/ /app/test/
 COPY args/ /app/args/
 COPY aixlog/ /app/aixlog/
 COPY benchmark/ /app/benchmark/
+COPY protobuf/ /app/protobuf/
 COPY cmake_timestamp/ /app/cmake_timestamp/
 COPY CMakeLists.txt /app/
 
@@ -42,14 +43,16 @@ COPY CMakeLists.txt /app/
 RUN mkdir -p build && \
     cd build && \
     cmake -DCMAKE_BUILD_TYPE=Debug .. && \
-    make onnx2c
+    make onnx2c && \
+    cp onnx2c /usr/bin/onnx2c && \
+    make clean
 
 # Copy web converter files
 COPY web_converter/ /app/
 COPY web_converter/app /app/web_app/
 
 # Set environment variables
-ENV ONNX2C_PATH=/app/build/onnx2c
+ENV ONNX2C_PATH=/usr/bin/onnx2c
 ENV PYTHONPATH=/app
 
 # Expose port
